# sr-rs

./: .env.example  .gitignore  Cargo.toml
files/: style.css
files/css/: ecb.css  meet.css
files/js/: calendar.js  ecb.js  meet.js
migrations/: 20240729145708_init.down.sql  20240729145708_init.up.sql  20240730182310_ecb.down.sql  20240730182310_ecb.up.sql  20240803150906_ecb-named-Clip.down.sql  20240803150906_ecb-named-Clip.up.sql  20240812153923_ecb_private_Clip.down.sql  20240812153923_ecb_private_Clip.up.sql  20240812185227_meet.down.sql  20240812185227_meet.up.sql  20240812185227_notebook.down.sql  20240812185227_notebook.up.sql
src/: accounts.rs  crypt.rs  ecb.rs  jwt.rs  lib.rs  main.rs
src/ecb/: mod.rs
src/meet/: group.rs  mod.rs  user.rs
src/notebook/: user.rs
